fix: modals on small screens

--- a/src/pages/app/mail-list.css
+++ b/src/pages/app/mail-list.css
@@ -246,6 +246,8 @@ pre {
   bottom: -20px;
   width: auto;
   left: 0;
+  right: 0;
+  margin: 0 auto;
   opacity: 0;
   width: 66px;
   cursor: pointer;
